Jump Start Changelog
====================

1.1.1
-----

* Fixed admin bugs in Firefox, media uploader and radio button options.
* Fixed bug with archive content/excerpt option not being respected on search results.

1.1.0
-----

*Warning: Make sure to checkout this article before updating: [Updating to Jump Start 1.1](http://support.themeblvd.com/updating-to-jump-start-1-1/)*

**If you're using the Layout Builder plugin, you must update it to v1.2+**<br />
**If you're using the Sliders plugin, you must update it to v1.1+**

* **Updated Theme Blvd Framework to v2.3.**
* Updated FontAwesome to v3.2.
* Updated Twitter Bootstrap to v2.3.
* Updated Superfish to v1.7.4.
* Updated Roundabout script to v2.4.2.
* Fixed CSS bug with video icon not showing on featured images linking to videos.
* Fixed bug with "Category" source selection for Post Slider not working correctly.
* Fixed issues with `FORCE_SSL_ADMIN` set to true on admin modules.
* Made Google+ icons standards-compliant.
* Added `themeblvd_content_bottom` action hook directly opposite of `themeblvd_content_top`.
* Added ability to hide Theme License admin page via `themeblvd_global_config` filter.
* Added filterable `edit_theme_options` capability to License admin page.
* Added default styling for captions of a `[gallery]`.
* Added support for some new features of Sliders plugin v1.1+.
* Added support for WP 3.5+ media uploader.
* Added support for Nivo Slider.
* Added `themeblvd_default_sidebar_args` filter for arguments when registering default sidebar locations.
* Mini post grid now accepts `[gallery]` shortcode for the gallery override feature.
* On mobile, main content area now always displays above sidebars for all sidebar layouts.
* On mobile, slogan element of Layout Builder displays button after slogan text.
* Removed post meta from displaying with pages in search results.
* Removed "Configuration" tab from default framework Theme Options.
* Removed analytics option from Theme Options.