@@ -4,8 +4,10 @@ Jump Start Changelog
 1.1.1
 -----
 
-* Fixed admin bugs in Firefox, media uploader and radio button options.
+* Fixed admin bugs in Firefox, media uploader, radio buttons, and color pickers.
 * Fixed bug with archive content/excerpt option not being respected on search results.
+* Fixed bug with `themeblvd_edit_option()` in Options API.
+* Adjusted for `themeblvd_get_option_name()` to be available earlier, like prior to framework v2.3.
 
 1.1.0
 -----
